--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filmoteka-team3",
   "version": "2.0.0",
-  "description": "",
+  "description": "Цей проект створено за допомогою Parcel. Для ознайомлення та налаштування \r додаткових можливостей, [зверніться до документації](https://parceljs.org/).",
   "homepage": "https://ramocoblisan.github.io/filmoteka-team3/",
   "scripts": {
     "start": "parcel src/*.html",
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/RamoCoblisan/filmoteka-team3.git"
   },
   "keywords": [],
-  "author": "JS Team 3<JSteam3@gmail.com>",
+  "author": "JS Team 3 <JSteam3@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/RamoCoblisan/filmoteka-team3/issues"
@@ -34,5 +34,6 @@
     "posthtml-include": "^1.7.4",
     "process": "^0.11.10"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "main": "index.js"
 }
